--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2163,6 +2163,7 @@
   "channel_modal.purpose": "Purpose",
   "channel_modal.purposeEx": "E.g.: \"A channel to file bugs and improvements\"",
   "channel_modal.type": "Type",
+  "channel_modal.sources": "Sources",
   "channel_notifications.allActivity": "For all activity",
   "channel_notifications.globalDefault": "Global default ({notifyLevel})",
   "channel_notifications.ignoreChannelMentions": "Ignore mentions for @channel, @here and @all",
